firmware/lib/control-table/tests/ui/enum_repr_i8.rs
use control_table::Enum;

#[derive(Enum)]
#[repr(i8)]
enum ReprI8 {
    A = 0,
    B = 1,
}

fn main() {}
